fix(core): Fix alignment of Online subscription badge
The expiration badge for Online subscriptions was slightly mis-aligned due to sharing styling with
enterprise subs. Added a new class specifically for online subs.

--- a/app/modules/core/myCompany/mySubscriptions/my-subscription.scss
+++ b/app/modules/core/myCompany/mySubscriptions/my-subscription.scss
@@ -201,6 +201,10 @@
       @include vr-spacing(pt, 0);
       color: $gray-dark-1;
       width: auto;
+
+      .online-subscription-summary {
+        @include vr-spacing(mb, 0);
+      }
     }
 
     .category-data-section {
